Leave Management System using Android committed

--- a/app/src/main/res/layout/activity_employee_profile.xml
+++ b/app/src/main/res/layout/activity_employee_profile.xml
@@ -69,13 +69,16 @@
 
             <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center">
+                android:layout_height="match_parent">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginRight="20dp"
                     android:gravity="center"
                     android:orientation="vertical">
 
@@ -88,7 +91,6 @@
                         android:layout_marginEnd="5dp"
                         android:layout_marginRight="5dp"
                         android:layout_marginBottom="10dp"
-                        android:gravity="center"
                         android:text="Employee Id:"
                         android:textColor="#191818"
                         android:textSize="18sp"
@@ -103,7 +105,6 @@
                         android:layout_marginEnd="5dp"
                         android:layout_marginRight="5dp"
                         android:layout_marginBottom="30dp"
-                        android:gravity="center"
                         android:textColor="#4CAF50"
                         android:textSize="18sp"
                         android:textStyle="normal" />
@@ -117,7 +118,6 @@
                         android:layout_marginEnd="5dp"
                         android:layout_marginRight="5dp"
                         android:layout_marginBottom="10dp"
-                        android:gravity="center"
                         android:text="Employee Name:"
                         android:textColor="#1B1A1A"
                         android:textSize="18sp"
@@ -132,7 +132,6 @@
                         android:layout_marginEnd="5dp"
                         android:layout_marginRight="5dp"
                         android:layout_marginBottom="30dp"
-                        android:gravity="center"
                         android:text="TextView"
                         android:textColor="#4CAF50"
                         android:textSize="18sp"
@@ -147,7 +146,6 @@
                         android:layout_marginEnd="5dp"
                         android:layout_marginRight="5dp"
                         android:layout_marginBottom="10dp"
-                        android:gravity="center"
                         android:text="Emoployee Joining Date"
                         android:textColor="#191818"
                         android:textSize="18sp"
@@ -162,7 +160,6 @@
                         android:layout_marginEnd="5dp"
                         android:layout_marginRight="5dp"
                         android:layout_marginBottom="30dp"
-                        android:gravity="center"
                         android:text="TextView"
                         android:textColor="#4CAF50"
                         android:textSize="18sp"
@@ -177,7 +174,6 @@
                         android:layout_marginEnd="5dp"
                         android:layout_marginRight="5dp"
                         android:layout_marginBottom="10dp"
-                        android:gravity="center"
                         android:text="Manager Id:"
                         android:textColor="#191818"
                         android:textSize="18sp"
@@ -192,7 +188,6 @@
                         android:layout_marginEnd="5dp"
                         android:layout_marginRight="5dp"
                         android:layout_marginBottom="30dp"
-                        android:gravity="center"
                         android:text="TextView"
                         android:textColor="#4CAF50"
                         android:textSize="18sp"
