--- a/app/src/main/res/layout/activity_summary1.xml
+++ b/app/src/main/res/layout/activity_summary1.xml
@@ -78,9 +78,12 @@
                     android:id="@+id/textView4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginLeft="20dp"
                     android:layout_marginTop="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginRight="20dp"
                     android:layout_marginBottom="10dp"
-                    android:gravity="center"
                     android:text="Employee Id"
                     android:textColor="#201F1F"
                     android:textSize="18sp"
@@ -90,8 +93,11 @@
                     android:id="@+id/textView35"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginRight="20dp"
                     android:layout_marginBottom="30dp"
-                    android:gravity="center"
                     android:text="TextView"
                     android:textColor="#4CAF50"
                     android:textSize="18sp"
@@ -102,8 +108,11 @@
                     android:id="@+id/textView3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginRight="20dp"
                     android:layout_marginBottom="10dp"
-                    android:gravity="center"
                     android:text="Employee Name"
                     android:textColor="#201F1F"
                     android:textSize="18sp"
@@ -113,8 +122,11 @@
                     android:id="@+id/textView25"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginRight="20dp"
                     android:layout_marginBottom="30dp"
-                    android:gravity="center"
                     android:text="TextView"
                     android:textColor="#4CAF50"
                     android:textSize="18sp"
@@ -124,8 +136,11 @@
                     android:id="@+id/textView26"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginRight="20dp"
                     android:layout_marginBottom="10dp"
-                    android:gravity="center"
                     android:text="Remaining PL"
                     android:textColor="#201F1F"
                     android:textSize="18sp"
@@ -135,8 +150,11 @@
                     android:id="@+id/textView27"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginRight="20dp"
                     android:layout_marginBottom="30dp"
-                    android:gravity="center"
                     android:text="TextView"
                     android:textColor="#4CAF50"
                     android:textSize="18sp"
@@ -146,8 +164,11 @@
                     android:id="@+id/textView30"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginRight="20dp"
                     android:layout_marginBottom="10dp"
-                    android:gravity="center"
                     android:text="Remaining SL"
                     android:textColor="#201F1F"
                     android:textSize="18sp"
@@ -157,8 +178,11 @@
                     android:id="@+id/textView31"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginRight="20dp"
                     android:layout_marginBottom="30dp"
-                    android:gravity="center"
                     android:text="TextView"
                     android:textColor="#4CAF50"
                     android:textSize="18sp"
@@ -168,8 +192,11 @@
                     android:id="@+id/textView32"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginRight="20dp"
                     android:layout_marginBottom="10dp"
-                    android:gravity="center"
                     android:text="Remaining CL"
                     android:textColor="#201F1F"
                     android:textSize="18sp"
@@ -179,8 +206,11 @@
                     android:id="@+id/textView33"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginRight="20dp"
                     android:layout_marginBottom="30dp"
-                    android:gravity="center"
                     android:text="TextView"
                     android:textColor="#4CAF50"
                     android:textSize="18sp"
